--- a/src/auth/correo/recoverCorreo.html
+++ b/src/auth/correo/recoverCorreo.html
@@ -23,7 +23,7 @@
                     <p style="margin-top: 10px;">
                         Por favor, ten en cuenta que por razones de seguridad, el enlace anterior expirará en 24 horas desde el momento de este correo electrónico
                     </p>
-                    <a href="#" style="background-color: #00A166; font-weight: 700; font-size: 22px; border-radius: 10px; margin-top: 30px; border: none; padding: 20px 0px 20px 0px; color: #ffffff; width: 100%; text-decoration: none; text-align: center; display: inline-block; cursor: pointer;">
+                    <a href="{{resetLink}}" style="background-color: #00A166; font-weight: 700; font-size: 22px; border-radius: 10px; margin-top: 30px; border: none; padding: 20px 0px 20px 0px; color: #ffffff; width: 100%; text-decoration: none; text-align: center; display: inline-block; cursor: pointer;">
                     Restablecer contraseña
                     </a>
                 </div>
