--- a/src/auth/correo/recoverCorreo.html
+++ b/src/auth/correo/recoverCorreo.html
@@ -5,29 +5,27 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     </head>
-    <body>
-        <div style="background-color: #c4dfd5; width: 100%; padding: 30px 0px 30px 0px;">
-            <div style="padding: 0px 0px 30px 0px; background-color: #ffffff; width: 700px; height: 350px; margin-left: 20px;  justify-content: center; display: flex; margin-left: 200px;">
+    <body style="background-color: #c4dfd5; width: 100%; height: 100%; padding: 30px 10px 30px 10px; display: flex; justify-content: center;">
+        <div style="padding: 0px 0px 30px 0px; background-color: #ffffff; width: 700px; margin: auto; height: 350px;">
               
-                <div style="padding: 20px 30px 20px 30px">
-                    <div>
-                        <img src="https://firebasestorage.googleapis.com/v0/b/torresevalfinal.appspot.com/o/Imagenes%2FLogo.PNG?alt=media&token=842ff235-785c-4ff8-a3a5-d7243a0d007f" alt="Logo" width="150" height="50" >
-                    </div>
-
-                    <hr style="border-top-width: 1px; margin-top: 20px; width: 640px; border-color: #00A166;">
-
-                    <p>Recibimos una solicitud para restablecer tu contraseña.</p>
-                    <p style="margin-top: 10px;">
-                        Para restablecer tu contraseña, por favor haga click en el boton restablecer contrasena.
-                    </p>
-                    <p style="margin-top: 10px;">
-                        Por favor, ten en cuenta que por razones de seguridad, el enlace anterior expirará en 24 horas desde el momento de este correo electrónico
-                    </p>
-                    <a href="{{resetLink}}" style="background-color: #00A166; font-weight: 700; font-size: 22px; border-radius: 10px; margin-top: 30px; border: none; padding: 20px 0px 20px 0px; color: #ffffff; width: 100%; text-decoration: none; text-align: center; display: inline-block; cursor: pointer;">
-                    Restablecer contraseña
-                    </a>
+            <div style="padding: 20px 30px 20px 30px">
+                <div>
+                    <img src="https://firebasestorage.googleapis.com/v0/b/torresevalfinal.appspot.com/o/Imagenes%2FLogo.PNG?alt=media&token=842ff235-785c-4ff8-a3a5-d7243a0d007f" alt="Logo" width="150" height="50" >
                 </div>
+
+                <hr style="border-top-width: 1px; margin-top: 20px; width: 640px; border-color: #00A166;">
+
+                <p>Recibimos una solicitud para restablecer tu contraseña.</p>
+                <p style="margin-top: 10px;">
+                    Para restablecer tu contraseña, por favor haga click en el boton restablecer contrasena.
+                </p>
+                <p style="margin-top: 10px;">
+                    Por favor, ten en cuenta que por razones de seguridad, el enlace anterior expirará en 24 horas desde el momento de este correo electrónico
+                </p>
+                <a href="{{resetLink}}" style="background-color: #00A166; font-weight: 700; font-size: 22px; border-radius: 10px; margin-top: 30px; border: none; padding: 20px 0px 20px 0px; color: #ffffff; width: 100%; text-decoration: none; text-align: center; display: inline-block; cursor: pointer;">
+                Restablecer contraseña
+                </a>
             </div>
-        </div>  
+        </div>
     </body>
 </html>
